fix sidebar and children_category_page, add breadcrums in filter-page

--- a/ecomm/templates/ecomm/base.html
+++ b/ecomm/templates/ecomm/base.html
@@ -24,6 +24,8 @@
 {% include "ecomm/footer.html" %}
 {% include 'bootstrap/js/js.html' %}
 
+{% block extra_body %}
+{% endblock extra_body %}
 </body>
 </html>
 
