--- a/ecomm/templates/ecomm/category_children.html
+++ b/ecomm/templates/ecomm/category_children.html
@@ -36,26 +36,33 @@
             {% endif %}
         </div>
 
-        {% for product in products %}
-        <div class="col-3">
-        <div class="card">
-            <img src="{% if product.image %}{{ product.image_in_category.url }}{% endif %}" class="card-img-top">
-            <div class="card-body">
-                <h5 class="card-title"><a href="{{ product.get_absolute_url }}">{{ product.name }}</a></h5>
-                <p class="card-text">{{ product.description|truncatechars:100}}</p>
-                <p class="card-text">Цена: {{ product.price }}</p>
+        <div class="col-sm-9">
+            <div class="row">
+                {% for product in products %}
+                    <div class="col-sm-4">
+                        <div class="card mb-2">
+                            <img src="{% if product.image %}{{ product.image_in_category.url }}{% endif %}"
+                                 class="card-img-top"
+                            >
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    <a href="{{ product.get_absolute_url }}">{{ product.name }}</a>
+                                </h5>
+                                <p class="card-text">{{ product.description|truncatechars:100}}</p>
+                                <p class="card-text">Цена: {{ product.price }}</p>
+                            </div>
+                            <div class="card-footer">
+                                <a href="{{ product.get_absolute_url }}" class="btn btn-primary">Подробнее</a>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
             </div>
-            <div class="card-footer">
-                <a href="{{ product.get_absolute_url }}" class="btn btn-primary">Подробнее</a>
-            </div>
         </div>
-        </div>
-        {% endfor %}
-        </div>
-
-    <div class="text">
-        <p>{{ category.description }}</p>
     </div>
 
+    <div class="text pt-4">
+        <p>{{ category.description }}</p>
+    </div>
 </div>
 {% endblock %}
