--- a/filter/templates/filter/filter_list.html
+++ b/filter/templates/filter/filter_list.html
@@ -2,9 +2,16 @@
 {% load static %}
 {% load i18n %}
 
+{% block title %}
+    <title>Товары по запросу – {{filter_name}}</title>
+{% endblock title %}
+
 {% block content %}
+    {% load breadcrumbs %}
+    {% get_breadcrumbs_other "Search" %}
+
 <div class="container">
-    <h1>Товары по запросу "{{ filter_name }}"</h1>
+    <h1>Товары соответствующие запросу "{{filter_name}}"</h1>
     <div class="row row-cols-4">
         {% for value in values %}
         <div class="col">
