add comment and similar products

--- a/ecomm/templates/ecomm/feedback.html
+++ b/ecomm/templates/ecomm/feedback.html
@@ -36,7 +36,8 @@
             <!--Message from Backend-->
             {% for message in messages %}
                 {% if message.tags == 'success' %}
-                    <div>{{ message }}
+                    <div>
+                        {{message}}
                         <a href="{% url 'ecomm:feedback' %}"></a>
                     </div>
                 {% endif %}
