clean cart in request.session and changed product.quantity

--- a/orders/templates/orders/order/thanks.html
+++ b/orders/templates/orders/order/thanks.html
@@ -1,14 +1,18 @@
 {% extends "ecomm/base.html" %}
 
 {% block title %}
-    <title>Checkout</title>
+    <title>Thanks for your order</title>
 {% endblock %}
 
 {% block content %}
-    <h1>Ваш заказ принят</h1>
-    <div class="text">
-    <span>
-        В ближайшее время мы сформируем и отправим вам заказ. Благодарим за покупку в нашем магазине
-    </span>
+    <div class="container-lg">
+        <div class="row">
+            <h1 class="text-center">Ваш заказ принят</h1>
+        </div>
+        <div class="row">
+            <p class="text-center">В ближайшее время мы сформируем и отправим вам заказ</p>
+            <br />
+            <p class="text-center">Благодарим за покупку в нашем интернет-магазине</p>
+        </div>
     </div>
 {% endblock %}
