--- a/ecomm/templates/account/base.html
+++ b/ecomm/templates/account/base.html
@@ -1,24 +1,15 @@
 {% extends 'ecomm/base.html' %}
 {% load i18n %}
+
   <head>
-    <title>{% block head_title %}{% endblock %}</title>
-    {% block extra_head %}
+      {% block title %}
+          <title>{% block head_title %}{% endblock %}</title>
+       {% endblock title %}
+       {% block extra_head %}
     {% endblock %}
   </head>
   <body>
     {% block body %}
-
-    {% if messages %}
-    <div>
-      <strong>Messages:</strong>
-      <ul>
-        {% for message in messages %}
-        <li>{{message}}</li>
-        {% endfor %}
-      </ul>
-    </div>
-    {% endif %}
-
     <div>
       <strong>Menu:</strong>
       <ul>
