--- a/ecomm/templates/ecomm/product.html
+++ b/ecomm/templates/ecomm/product.html
@@ -96,7 +96,7 @@
             <h3 class="text">Добавить комментарий о товаре</h3>
             <form action="." method="post" class="order-form">
                 {{ comment_form.as_p }}
-                <p><input type="submit" value="Оставить комментарий"></p>
+                <p><input class="btn btn-primary" type="submit" value="Оставить комментарий"></p>
                 {% csrf_token %}
             </form>
          </div>
